ChangeLog for photo-uploader
============================

Major changes for each release are described here. Detailed changes between
two versions can be retrieved from Git.

0.12
==== (2013-02-??)

* Drop support for no longer available services:
	ILikePhoto, iTesco.cz, Fotostar, Droxi,
	DM-paradies.

0.11
==== (2013-10-28)

* Updated imageshack support.

0.10
==== (2013-03-20)

* Compatibility with Python 3.
* Fix build with Python 2.7.
* Added documentation in Sphinx format.
* Updated imageshack support.

0.9
=== (2010-02-10)

* Fixed grabbing URL from imageshack.

0.8
=== (2009-10-30)

* Fixed grabbing URL from imageshack.
* Fixed defaults to not open browser.
* Default to imageshack.us service.

0.7
=== (2009-05-11)

* Added support for happyfoto.cz.
* Added support for happyfoto.sk.

0.6
=== (2008-03-21)

* Added support for iTesco.cz.

0.5
=== (2007-12-11)

* Added generic helper for ILikePhoto service.
* Added some error checking.
* Fixed handling of wrong parameters passed (non files).

0.4
=== (2007-11-07)

* Fixed crash.
* Added uloz.to service.

0.3
=== (2007-10-08)

* It is possible to get session ID from API.
* Added support for opening in user defined browser.
* Now parses ~/.photo-upload and uses it as defaults.
* Support for uploading to imageshack.us.

0.2
=== (2007-10-01)

* Modularize the code.
* Add support for new services.

0.1
=== (2007-09-25)

* Initial relase.
